--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div class="container-button">
-                <div class="btn__list"><button class="btn__item btn__eight"> <a href="index1.html">КЫРГЫЗ</a></button></div>
+                <div class="btn__list"><button class="btn__item btn__eight"> <a href="index1.html">КЫРГ</a></button></div>
             </div>
             </div>
             <div class="row">
