--- a/index1.html
+++ b/index1.html
@@ -58,7 +58,7 @@
 
             </div>
             <div class="container-button">
-                <div class="btn__list"><button class="btn__item btn__eight"><a href="index.html">РУС</a> </button></div>
+                <div class="btn__list"><button  id="button-nine" class="btn__item btn__eight"><a href="index.html">РУС</a> </button></div>
             </div>
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center inner">
